[package]
name = "rust-grep"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "grep clone written in rust"
repository = "https://github.com/saizo80/rust-grep"
authors = ["saizo <saizo@simplemail.is>"]
keywords = ["grep", "rust"]
categories = ["command-line-utilities"]

[[bin]]
name = "rgrep"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
regex = "1.9.3"
